--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,19 @@
-<h1>Articles</h1>
-
-<ul>
-  <% @articles.each do |article| %>
-    <li>
-      <%= link_to article.title, article %>
-    </li>
-  <% end %>
-</ul>
-
-<%= link_to 'New Article', new_article_path %>
+<div class="main-section">
+  <div class="new-post-container">
+    <%= link_to new_article_path do %> <button class="new-btn">New Article</button> <% end %>
+  </div>
+  <div class="post-containers">
+    <div class="blog-title">
+      <h1>My Rails Blog</h1>
+      <h2 class="caption">Posts</h2>
+    </div>
+    <div class="posts-section">
+        <% @articles.each do |article| %>
+          <div class="post">
+            <%= link_to article do %> <h3 class="article-title"> <%= article.title %> </h3> <% end %>
+          </div>
+          <% unless article == @articles.last %> <hr> <% end %>
+        <% end %>
+    </div>
+  </div>
+</div>
