--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,8 +3,8 @@
     <%= link_to new_article_path do %> <button class="new-btn">New Article</button> <% end %>
   </div>
   <div class="post-containers">
-    <div class="blog-title">
-      <h1>My Rails Blog</h1>
+    <div>
+      <h1 class="blog-title">My Rails Blog</h1>
       <h2 class="caption">Posts</h2>
     </div>
     <div class="posts-section">
